@@ -40,11 +40,18 @@ ECL 10.3.2:
    are now stored both in FASL form and as statically linked libraries.
 
  - ASDF:MAKE-BUILD now takes a new keyword argument, :MOVE-HERE, that allows
-   moving the files that ASDF creates to the current directory.
+   moving the files that ASDF creates to the current directory. :MOVE-HERE can
+   be a flag, in which case the files are output at ./asdf-output/ or a
+   pathname designator, in which case the directories are created.
 
  - Gray streams implement a new generic function, GRAY:STREAM-FILE-DESCRIPTOR
    which is used by SERVE-EVENT to gather the system identifier which is used
    to wait on input from the device.
+
+ - ASDF:MAKE-BUILD admits a new type, :BINARY, which creates a standalone
+   system (*.asd) accompanied by two binary files, statically linked library
+   (.a or .lib), and a FASL (*.fasb). This can be used, to replace existing
+   systems with precompiled ones.
 
 ECL 10.3.1:
 ===========
